[package]
name = "synth"
description = "A polyphonic Synth type whose multiple oscillators generate sound via amplitude and frequency envelopes."
version = "0.11.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["synthesis", "dsp", "audio", "music", "instrument"]
license = "MIT"
repository = "https://github.com/RustAudio/synth.git"
homepage = "https://github.com/RustAudio/synth"

[dependencies]
envelope = "0.8.1"
instrument = "0.2.0"
mindtree_utils = "0.4.0"
panning = "0.1.1"
pitch_calc = "0.12.0"
rand = "0.3.14"
dasp = "0.11.0"
simple_gaussian = "0.4.4"
time_calc = "0.11.0"
dsp-chain = { git = "https://github.com/RustAudio/dsp-chain"}
serde = { optional = true, version = "0.7.0" }
serde_json = { optional = true, version = "0.7.0" }

[features]
serde_serialization = [
    "serde",
    "serde_json",
    "envelope/serde_serialization",
    "instrument/serde_serialization",
]

[dev-dependencies]
portaudio = "0.6.3"
